# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240409000153_create_subscription_table.sql  20240513163436_make_status_not_null_in_susbcripitions.sql  20240513163905_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscribe.rs  subscription.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
